--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3 # https://github.com/actions/setup-node
         with:
-          node-version-file: "${{github.workspace}}/.nvmrc"
+          node-version-file: .nvmrc
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v3 # https://github.com/actions/configure-pages
