--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,7 +1,3 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
 name: Deploy Next.js site to Pages
 
 on:
@@ -16,6 +12,7 @@ on:
 permissions:
   contents: read
   pages: write
+  id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -30,27 +27,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4 # https://github.com/actions/checkout
+      
       - name: Setup Node
         uses: actions/setup-node@v3 # https://github.com/actions/setup-node
         with:
           node-version-file: .nvmrc
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      
       - name: Setup Pages
         uses: actions/configure-pages@v3 # https://github.com/actions/configure-pages
+      
+      # next.js build caching. doc:
+      # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#github-actions
       - name: Restore cache
-        uses: actions/cache@v3
+        uses: actions/cache@v3 # https://github.com/actions/cache
         with:
           path: |
-            .next/cache
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+      
       - name: Install dependencies
         run: npm ci
+      
       - name: Build with Next.js
         run: npm run build
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
