--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -41,9 +41,7 @@ jobs:
       - name: Set images base path
         id: set-images-base-path
         run: |
-          cat image-loader.js
-          echo 'basePath="${{steps.setup-pages.outputs.base_path}}";' >> image-loader.js
-          cat image-loader.js
+          echo 'basePath="${{steps.setup-pages.outputs.base_path}}";' >> ./image-loader.js
 
       # next.js build caching. doc:
       # https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching#github-actions
